# uncertainty-quantification

./: .gitignore  README.md  pyproject.toml  requirements.txt  selective_classification_analysis.json
docs/: 1d_score_resolution_options.md  baseline_float-precisions_report-2.md  baseline_hyperparams_report.md  binning_1d_scores.md  experimental_procedure_report.md  inconsistencies_log.md  margin_results_table.tex  max_proba_temperature_report.md  msp_results_table.tex  partition_binning_report.md  refactoring_plan.md  score_temperature_test_report.md
scripts/: analyze_selective_classification.py  build_results_report.py  generate_results_tables.py  plot_risk_coverage.py  plot_rocauc_vs_nclusters.py  plot_rocauc_vs_nclusters_multiplot.py  plot_score_heatmap.py  run_all_lda_experiments.sh  run_combined_2d_experiments.sh  run_combined_scores_experiments.sh  run_doctor_experiments.sh  run_doctor_res_grid_cifar100_densenet121_all_seeds.sh  run_doctor_res_grid_cifar100_resnet34_all_seeds.sh  run_doctor_res_grid_cifar10_densenet121_all_seeds.sh  run_doctor_res_grid_cifar10_resnet34_all_seeds.sh  run_doctor_res_grid_imagenet_all.sh  run_isotonic_all_datasets_models.sh  run_isotonic_splitting_all_datasets_models.sh  run_kmeans_cdf.sh  run_kmeans_cdf_cifar100_densenet121_all_seeds.sh  run_kmeans_cdf_cifar100_resnet34_all_seeds.sh  run_kmeans_cdf_cifar10_densenet121_all_seeds.sh  run_kmeans_cdf_cifar10_resnet34_all_seeds.sh  run_kmeans_constrained_doctor_all.sh  run_kmeans_constrained_top5_all.sh  run_lda_binning_all_datasets_models.sh  run_margin_experiments.sh  (+16 more)
(+463 files in other folders)
